--- a/css.css
+++ b/css.css
@@ -8,13 +8,10 @@ body{
     background-color: #ffffff;
     text-align: center;
 }
-.slide {
-    display: none;
-    }
-.ar {
+article {
     border: 1px solid black;
     padding: 0 5px 1px 1px;
-    margin: 5px
+    margin: 0px
     }
     
 h1, h2, h3 {
@@ -25,7 +22,7 @@ header{
     background: #ffffff;
     color: rgb(255, 0, 0);
     padding-top: 20px;
-    padding-bottom: 10px;
+    padding-bottom: 40px;
     border-bottom: rgb(255, 0, 0)
     5px solid;
     height: 200px;
@@ -72,15 +69,17 @@ header div{
     float: left;
     margin: 0%;
 }
-article{
-    margin: 0%;
-    }
 body ul li{
     text-decoration: none;
     list-style: none;
     margin-right: auto;
     margin-left: auto;
 }
+.reg {
+    width: 300px;;
+    height: 300px;
+    margin: auto;
+    }
 .c {
     margin-right: auto;
     margin-left: auto;
@@ -94,7 +93,11 @@ button{
     padding-right: 20px;
     color: #ffffff;
     }
-    
+#map{
+        height: 430px;
+        width: 300px;
+    }
+
 footer{
     border-top: rgb(255, 0, 0) 5px solid;
     padding: 20px;
@@ -118,43 +121,24 @@ header{
     border-bottom: rgb(255, 0, 0)
     5px solid;
     height: 200px;
-
+    margin: 0px;
     width: 100%;
 }
 h1 {
-    font-size: 300%;
+        font-size: 300%;
     }
 .comp {
     width: 100%;
 }    
 body{
     font: 15px/1.5 Arial, Helvetica, sans-serif;
-    padding-top: 0px;
+    padding: 1px;
     margin: 10px;
     background-color: #ffffff;
     text-align: center;
 }
-.slide {
-    width: 500px;
-    height: 400px;
-    margin: auto;
-    align-content: center;
-    }
 .tmp {
-    text-align: left;
-    width: 350px;
-    margin-top: 50px;
-    }
-.bring {
-    width: 300px;
-    float: right;
-    margin-top: 75px;
-    margin-bottom: 80px;
-    margin-left: 5px
-    }
-.ar {
-    width: 55%;
-
+    margin-top: 11%;
     }
 .topnav {
     background-color: #333;
@@ -168,7 +152,6 @@ body{
 #logo {
     width: 120px;
     height: 120px;
-    margin-bottom: -50px;
     }
 .reg {
     width: 300px;;
@@ -191,6 +174,9 @@ body{
     background-color: rgb(255, 0, 0);
     color: white;
 }
+.event {
+    margin-top: 50px;    
+    }
 body ul li{
     text-decoration: none;
     list-style: none;
@@ -221,6 +207,9 @@ footer{
     overflow: hidden;
     width: 100%;
 }
+.event {
+    margin-top: 50px;    
+    }
 .logo {
     width: 100px;
     height: 100px;
@@ -237,15 +226,7 @@ footer{
     color: black;
 }
 .tmp {
-    margin-top: 50px;
-    }
-.bring {
-    width: 50%;
-    float: right;
-    margin-top: -300px;
-    margin-bottom: 80px;
-    margin-left: 5px;
-    margin-right: 5%
+    margin: 9%;
     }
 .topnav a.active {
     background-color: rgb(255, 0, 0);
